deployment-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-rc
  labels:
    app: myapp
    type: front-end
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate   # deployment strategy is rolling update by default
  template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
        type: front-end
    spec:
      containers:
      - name: nginx-container
        image: nginx
  replicas: 3
  selector:
    matchLabels:
      type: front-end
